k8s/apps/networking/traefik/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: traefik
  namespace: networking
spec:
  hosts:
    - 'traefik.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 9000
            host: traefik.observability.svc.cluster.local
          weight: 100
